--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -50,7 +50,7 @@
     </mtr:MetroWindow.Flyouts>
 
     <Grid Margin="0,0,0,0">
-        <TabControl Margin="10,10,10,30">
+        <TabControl Margin="10,10,10,30" FocusVisualStyle="{x:Null}">
 
             <mtr:MetroTabItem Header="Home" Height="40">
                 <Grid>
@@ -103,7 +103,8 @@
 
                     <!-- EDF Header -->
                     <Label Content="EDF Header" FontSize="18" Margin="0,10,178.333,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="42" HorizontalAlignment="Right" Width="114"/>
-                    <Grid HorizontalAlignment="Right" Width="292" Margin="0,35,0.333,26.667" IsEnabled="{Binding IsEDFLoaded}">
+                    <ScrollViewer HorizontalAlignment="Right" Width="292" Margin="0,35,0.333,26.667" IsEnabled="{Binding IsEDFLoaded}">
+                    <Grid>
                         <Label x:Name="label5" Content="General Information" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="26" Width="136" FontSize="14"/>
                         <Grid Margin="10,31,10,0" Height="77" VerticalAlignment="Top">
                             <Label Content="Start" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="60" FontSize="14"/>
@@ -131,11 +132,18 @@
                             <TextBox x:Name="textBox_RI_Code" Height="23" Margin="90,45,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" Text="{Binding EDFRecordCode, Mode=OneWay}" FontSize="14"/>
                             <TextBox x:Name="textBox_RI_Technician" Height="23" Margin="90,76,10,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" Text="{Binding EDFRecordTechnician, Mode=OneWay}" FontSize="14"/>
                         </Grid>
-                        <Label Content="Signal Information" HorizontalAlignment="Left" Margin="10,423,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="127" FontSize="14"/>
-                        <ComboBox x:Name="comboBox_SignalSelect" Height="23" VerticalAlignment="Top" Margin="142,423,26,0" SelectionChanged="comboBox_SignalSelect_SelectionChanged" ItemsSource="{Binding EDFAllSignals, Mode=OneWay}" FontSize="14"/>
+                        <Label Content="Signal Properties" HorizontalAlignment="Left" Margin="10,423,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="127" FontSize="14"/>
+                        <ComboBox Height="23" VerticalAlignment="Top" Margin="142,423,26,0" SelectionChanged="comboBox_SignalSelect_SelectionChanged" ItemsSource="{Binding AllNonHiddenSignals, Mode=OneWay}" SelectedItem="{Binding PreviewPropertiesSelectedSignal}" FontSize="14"/>
                         <Label Content="Sample Rate" HorizontalAlignment="Left" Margin="10,457,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="97" FontSize="14"/>
-                        <TextBox x:Name="textBox_SampRecord" Height="23" Margin="112,460,26,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" FontSize="14"/>
+                        <TextBox Height="23" Margin="112,460,26,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" FontSize="14" Text="{Binding PreviewPropertiesSampleRate, Mode=OneWay}"/>
+                        <Label Content="Orig. Signal(s)" HorizontalAlignment="Left" Margin="10,488,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="97" FontSize="14"/>
+                        <TextBox Height="23" Margin="112,491,26,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" FontSize="14" Text="{Binding PreviewPropertiesComponentSignal, Mode=OneWay}"/>
+                        <Label Content="Lowpass Filter" HorizontalAlignment="Left" Margin="10,519,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="97" FontSize="14"/>
+                        <TextBox Height="23" Margin="112,522,26,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" FontSize="14" Text="{Binding PreviewPropertiesLowPassFilter, Mode=OneWay}"/>
+                        <Label Content="Smooth Filter" HorizontalAlignment="Left" Margin="10,550,0,0" VerticalAlignment="Top" RenderTransformOrigin="-5.432,0.857" Height="29" Width="97" FontSize="14"/>
+                        <TextBox Height="23" Margin="112,553,26,0" TextWrapping="Wrap" VerticalAlignment="Top" IsReadOnly="True" FontSize="14" Text="{Binding PreviewPropertiesSmoothFilter, Mode=OneWay}"/>
                     </Grid>
+                    </ScrollViewer>
                 </Grid>
             </mtr:MetroTabItem>
 
