--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -248,7 +248,7 @@
                                 </Grid.ColumnDefinitions>
                                 <!-- Epoch Selection -->
                                 <Label Content="Epoch" Margin="10,8,0,0" Height="33" VerticalAlignment="Top" Grid.Row="1"/>
-                                <ComboBox SelectedValue="{Binding RespiratoryAnalysisSelectedEpoch}" ItemsSource="{Binding RespiratoryAnalyzedEpochs}" IsEnabled="{Binding RespiratorySignalPlotExists}" Grid.ColumnSpan="3" Grid.Column="1" Height="33" VerticalAlignment="Top" Margin="5,4,56.333,0" Grid.Row="1"/>
+                                <ComboBox SelectedValue="{Binding RespiratoryAnalysisSelectedEpoch}" ItemsSource="{Binding RespiratoryAnalyzedEpochs}" IsEnabled="{Binding RespiratorySignalPlotExists}" Grid.ColumnSpan="3" Grid.Column="1" Height="33" VerticalAlignment="Top" Margin="53,4,8,0" Grid.Row="1"/>
                                 <!-- Label Column -->
                                 <Label Content="Mean" HorizontalAlignment="Left" Margin="10,32,0,0" VerticalAlignment="Top" Grid.Row="2" Height="29" Width="45"/>
                                 <Label Content="% Var" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Grid.Row="2" Height="29" Width="45"/>
@@ -281,11 +281,11 @@
                                 <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeMean}" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2"/>
                                 <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeCoeffVar}" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2"/>
                                 <!-- Change of Properties Plot -->
-                                <Label Name="RespSignalPropertiesPlotHeader" Content="Signal Properties"  Margin="10,17.333,0,0" Height="33"  VerticalAlignment="Top" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+                                <Label Name="RespSignalPropertiesPlotHeader" Content="Signal Properties"  Margin="10,7,0.333,0" Height="33"  VerticalAlignment="Top" Grid.Row="3" Grid.ColumnSpan="2"/>
                                 <oxy:PlotView Name="RespSignalPropertiesPlot" Background="Transparent" Margin="10,10.333,10.333,10" Model="{Binding RespiratoryPropertiesSignalPlot}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Grid.ColumnSpan="8" Grid.Row="4"/>
                             </Grid>
 
-                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}"/>
+                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Margin="650,270,650,262" Grid.ColumnSpan="2" RenderTransformOrigin="-1.989,0.933" HorizontalAlignment="Stretch" Width="Auto" VerticalAlignment="Stretch" Height="Auto"/>
                             <Button Content="Export" Margin="0,132,10.333,0" Height="30" VerticalAlignment="Top" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryCalculationsClick" Grid.Column="1" HorizontalAlignment="Right" Width="101"/>
                         </Grid>
                     </mtr:MetroTabItem>
@@ -299,36 +299,35 @@
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="70"/>
-                                    <ColumnDefinition MaxWidth="300" Width="301*"/>
-                                    <ColumnDefinition MaxWidth="220" Width="221*"/>
-                                    <ColumnDefinition Width="231*" MaxWidth="230"/>
-                                    <ColumnDefinition MaxWidth="150" Width="150*"/>
-                                    <ColumnDefinition MaxWidth="150" Width="150*"/>
+                                    <ColumnDefinition MaxWidth="300" Width="300*"/>
+                                    <ColumnDefinition MaxWidth="220" Width="220*"/>
+                                    <ColumnDefinition Width="230*" MaxWidth="230"/>
+                                    <ColumnDefinition MaxWidth="150" Width="120*"/>
                                 </Grid.ColumnDefinitions>
                                 <!-- Section Headers -->
                                 <Label Content="Signal Selection" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left"  Grid.ColumnSpan="2"/>
-                                <Label Content="Plot Options" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2"/>
+                                <Label Content="Plot Options" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2" Margin="0.333,0,0,0"/>
                                 <Label Content="Export" FontSize="18" Width="80" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="3" Margin="0,0,0,0"/>
                                 <!-- From Binary -->
-                                <Label Content="Binary" FontSize="14" Margin="0,5,20,5" Grid.Row="1"/>
-                                <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1" Click="button_BINEEGAnalysis_Click" />
-                                <TextBox x:Name="textBox" Grid.Column="1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Margin="155,5,10,5" Grid.Row="1" TextWrapping="Wrap" Text="{Binding EEGBinaryMaxEpoch}" IsEnabled="{Binding IsEEGBinaryLoaded}" IsReadOnly="true"/>
-                                <Label Content="Max" FontSize="14" Margin="115,5,0,5" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Width="39"/>
-                                <Label Content="Epoch" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0,5,0,5" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="1"/>
-                                <mtr:NumericUpDown FontSize="14"  Margin="55,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEEGBinaryLoaded}" Value="{Binding EEGEpochForAnalysisBinary}" Minimum="1" Grid.Column="2" Grid.Row="1"/>
+                                <Label Content="Binary" FontSize="14" Margin="0,5.333,20.333,5" Grid.Row="1"/>
+                                <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="9.667,8.333,0,8" Grid.Column="1" Grid.Row="1" Click="button_BINEEGAnalysis_Click" />
+                                <TextBox x:Name="textBox" Grid.Column="1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Margin="154.667,5.333,9.667,4" Grid.Row="1" TextWrapping="Wrap" Text="{Binding EEGBinaryMaxEpoch}" IsEnabled="{Binding IsEEGBinaryLoaded}" IsReadOnly="true"/>
+                                <Label Content="Max" FontSize="14" Margin="114.667,5.333,0,5" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Width="39"/>
+                                <Label Content="Epoch" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0.333,5.333,0,5" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="1"/>
+                                <mtr:NumericUpDown FontSize="14"  Margin="55.333,5.333,10,5" TextAlignment="Center" IsEnabled="{Binding IsEEGBinaryLoaded}" Value="{Binding EEGEpochForAnalysisBinary}" Minimum="1" Grid.Column="2" Grid.Row="1"/>
                                 <!-- From EDF -->
-                                <Label Content="EDF" FontSize="14" Margin="0,5,20,5" Grid.Row="2"/>
-                                <Label Content="Signal" FontSize="14" Width="50" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="2"/>
-                                <ComboBox Margin="60,5,10,5" IsEnabled="{Binding EEGEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding EEGEDFSelectedSignal}" Grid.Column="1" Grid.Row="2"/>
-                                <Label Content="Epoch" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0,5,0,5" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="2"/>
-                                <mtr:NumericUpDown FontSize="14"  Margin="55,5,10,5" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding EpochForAnalysis}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
+                                <Label Content="EDF" FontSize="14" Margin="0,5,20.333,5.333" Grid.Row="2"/>
+                                <Label Content="Signal" FontSize="14" Width="50" HorizontalAlignment="Left" Margin="9.667,5,0,5.333" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="2"/>
+                                <ComboBox Margin="59.667,5,9.667,5.333" IsEnabled="{Binding EEGEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding EEGEDFSelectedSignal}" Grid.Column="1" Grid.Row="2"/>
+                                <Label Content="Epoch" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0.333,5,0,5.333" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="2"/>
+                                <mtr:NumericUpDown FontSize="14"  Margin="55.333,5,10,5.333" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding EpochForAnalysis}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
                                 <!-- Export -->
-                                <Label Content="From" FontSize="14" Margin="0,8,0,2" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" Width="70"/>
-                                <mtr:NumericUpDown FontSize="14" Margin="65,5,10,5" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding ExportEpochStart}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="3" Grid.Row="1"/>
-                                <Label Content="To" FontSize="14" Margin="0,6,0,4" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Left" Width="70" RenderTransformOrigin="0.057,0.414"/>
-                                <mtr:NumericUpDown FontSize="14" Margin="65,5,10,5" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding ExportEpochEnd}" Minimum="{Binding ExportEpochStart}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="3" Grid.Row="2"/>
+                                <Label Content="From" FontSize="14" Margin="0,8.333,0,2" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" Width="70"/>
+                                <mtr:NumericUpDown FontSize="14" Margin="65,5.333,10.333,5" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding ExportEpochStart}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="3" Grid.Row="1"/>
+                                <Label Content="To" FontSize="14" Margin="0,6,0,4.333" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Left" Width="70" RenderTransformOrigin="0.057,0.414"/>
+                                <mtr:NumericUpDown FontSize="14" Margin="65,5,10.333,5.333" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding ExportEpochEnd}" Minimum="{Binding ExportEpochStart}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="3" Grid.Row="2"/>
                                 <Button Content="Export Analysis" IsEnabled="{Binding IsEDFLoaded}" Click="button_ExportEEGCalculations_Click" Grid.Column="4" Margin="10,6,10,6" Grid.Row="2"/>
-                                <Button Content="Export Plots" IsEnabled="{Binding IsEDFLoaded}" Click="button_ExportEEGPlots_Click" Grid.Column="5" Margin="10,6,10,6" Grid.Row="2"/>
+                                <Button Content="Export Plots" IsEnabled="{Binding IsEDFLoaded}" Click="button_ExportEEGPlots_Click" Grid.Column="4" Margin="10,6,10,6" Grid.Row="1"/>
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,130,0,0"/>
