--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -185,10 +185,10 @@
                     <mtr:MetroTabItem Header="Respiratory" Height="40" Margin="0,0,0,1">
                         <Grid Name="TabItem_Respiratory">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition MinWidth="600" Width="950*"/>
-                                <ColumnDefinition Name="column_RespAnalysis" MinWidth="200" Width="450*"/>
+                                <ColumnDefinition MinWidth="600" Width="833*"/>
+                                <ColumnDefinition Name="column_RespAnalysis" MinWidth="200" Width="470*"/>
                             </Grid.ColumnDefinitions>
-                            <Grid Height="125" VerticalAlignment="Top" Margin="10,0" Grid.ColumnSpan="2">
+                            <Grid Height="125" VerticalAlignment="Top" Margin="10,0,0,0" Grid.ColumnSpan="2">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="35"/>
                                     <RowDefinition Height="45"/>
@@ -225,7 +225,7 @@
 
                                 <!-- Export -->
                                 <Label Content="Export" FontSize="18" Height="32" VerticalAlignment="Top" Grid.Column="4" HorizontalAlignment="Left" Width="76" Margin="10,0,0,0"/>
-                                <Button Content="Export Plot" Height="30" VerticalAlignment="Top" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryCalculationsClick" Margin="10,6,10,6" Grid.Column="4" Grid.Row="2"/>
+                                <Button Content="Export Plot" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryCalculationsClick" Margin="10,6,10,6" Grid.Column="4" Grid.Row="2"/>
                                 <Button Content="Export Analysis" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryCalculationsClick" Grid.Column="4" Margin="10,6,10,6" Grid.Row="1"/>
                             </Grid>
 
@@ -288,7 +288,7 @@
                                 <Label Content="Analysis" FontSize="18" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="314" Grid.ColumnSpan="7" Margin="0,5,0,0"/>
                             </Grid>
 
-                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Margin="624,270,166,271" />
+                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Margin="614,270,159,271" />
                         </Grid>
                     </mtr:MetroTabItem>
                     <mtr:MetroTabItem Header="EEG" HorizontalAlignment="Left" Margin="0,0,-0.333,0" Width="55" Height="41" VerticalAlignment="Top">
@@ -378,7 +378,7 @@
                                     <!-- From Binary -->
                                     <Label Content="Binary" FontSize="14" Margin="0,5,20,5" Grid.Row="1"/>
                                     <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1"/>
-                                    <ToggleButton Content="CONSTANT AXIS" Width="100" HorizontalAlignment="Right" Margin="0,0,0,2" Grid.Column="2" IsEnabled="{Binding IsEDFLoaded}"  IsChecked="{Binding CoherenceUseConstantAxis}"/>
+                                    <ToggleButton Content="CONSTANT AXIS" Width="100" HorizontalAlignment="Right" Margin="0,0,10,2" Grid.Column="3" IsEnabled="{Binding IsEDFLoaded}"  IsChecked="{Binding CoherenceUseConstantAxis}"/>
                                     <!-- From EDF -->
                                     <Label Content="EDF" FontSize="14" Margin="0,5,20,0" Grid.Row="2"/>
                                     <Label Content="Signal 1" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,0" Grid.Column="1" Grid.Row="2"/>
@@ -387,8 +387,8 @@
                                     <ComboBox Margin="79.667,5.333,9.667,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal2}" Grid.Column="1" Grid.Row="3"/>
                                     <Label Content="From" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="2"/>
                                     <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFStartRecord, Delay=700}" Minimum="{Binding CoherenceEDFStartRecordMin}" Maximum="{Binding CoherenceEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
-                                    <Label Content="Duration" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="3"/>
-                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFDuration, Delay=700}" Minimum="{Binding CoherenceEDFDurationMin}" Maximum="{Binding CoherenceEDFDurationMax}" Grid.Column="2" Grid.Row="3"/>
+                                    <Label Content="Duration" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="3" Grid.Row="2"/>
+                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFDuration, Delay=700}" Minimum="{Binding CoherenceEDFDurationMin}" Maximum="{Binding CoherenceEDFDurationMax}" Grid.Column="3" Grid.Row="2"/>
                                 </Grid>
 
                                 <Grid Margin="10,175,10,0">
