--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -185,7 +185,7 @@
                     <mtr:MetroTabItem Header="Respiratory" Height="40" Margin="0,0,0,1">
                         <Grid Name="TabItem_Respiratory">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition MinWidth="600" Width="833*"/>
+                                <ColumnDefinition MinWidth="600" Width="830*"/>
                                 <ColumnDefinition Name="column_RespAnalysis" MinWidth="200" Width="470*"/>
                             </Grid.ColumnDefinitions>
                             <Grid Height="125" VerticalAlignment="Top" Margin="10,0,0,0" Grid.ColumnSpan="2">
@@ -199,7 +199,7 @@
                                     <ColumnDefinition MaxWidth="300" Width="300*"/>
                                     <ColumnDefinition MaxWidth="220" Width="220*"/>
                                     <ColumnDefinition MaxWidth="230" Width="230*" />
-                                    <ColumnDefinition MaxWidth="150" Width="120*"/>
+                                    <ColumnDefinition MaxWidth="120" Width="120*"/>
                                 </Grid.ColumnDefinitions>
                                 <!-- Section Headers -->
                                 <Label Content="Signal Selection" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left"  Grid.ColumnSpan="2"/>
@@ -221,22 +221,21 @@
                                 <mtr:NumericUpDown FontSize="14"  Margin="55,5,10,5" TextAlignment="Center" IsEnabled="{Binding RespiratoryEDFNavigationEnabled}" Value="{Binding RespiratoryEDFStartRecord, Delay=700}" Minimum="{Binding RespiratoryEDFStartRecordMin}" Maximum="{Binding RespiratoryEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
                                 <Label Content="Duration" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0,5" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="2"/>
                                 <mtr:NumericUpDown FontSize="14" Margin="65,5,10,5" TextAlignment="Center" IsEnabled="{Binding RespiratoryEDFNavigationEnabled}" Value="{Binding RespiratoryEDFDuration, Delay=700}" Minimum="{Binding RespiratoryEDFDurationMin}" Maximum="{Binding RespiratoryEDFDurationMax}" Grid.Column="3" Grid.Row="2"/>
-                                <ToggleButton Content="CONSTANT AXIS" Margin="0,3,6,0" IsEnabled="{Binding RespiratoryEDFNavigationEnabled}" IsChecked="{Binding RespiratoryUseConstantAxis}" HorizontalAlignment="Right" Width="100" Height="30" VerticalAlignment="Top" Grid.Column="3"/>
 
                                 <!-- Export -->
-                                <Label Content="Export" FontSize="18" Height="32" VerticalAlignment="Top" Grid.Column="4" HorizontalAlignment="Left" Width="76" Margin="10,0,0,0"/>
-                                <Button Content="Export Plot" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryCalculationsClick" Margin="10,6,10,6" Grid.Column="4" Grid.Row="2"/>
-                                <Button Content="Export Analysis" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryCalculationsClick" Grid.Column="4" Margin="10,6,10,6" Grid.Row="1"/>
+                                <Label Content="Export" FontSize="18" Height="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="112" Grid.Column="4" Margin="9,2,0,0" Grid.RowSpan="2"/>
+                                <Button Content="Export" IsEnabled="{Binding RespiratorySignalPlotExists}" Click="button_ExportRespiratoryPlotClick" Grid.Column="4" Margin="10,6" Grid.Row="1"/>
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,130,0,0"/>
-                            <oxy:PlotView Name="Resp_Plot" Background="Transparent" Margin="10,160,10,10" Model="{Binding RespiratorySignalPlot}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True"/>
-                            <Grid Name="Resp_Analysis" Margin="0,125,10,10" Grid.Column="1">
+                            <oxy:PlotView Name="RespSignalPlot" Background="Transparent" Margin="10,175,10,10" Model="{Binding RespiratorySignalPlot}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True"/>
+                            <oxy:PlotView Name="RespAnalyticsPlot" Visibility="Hidden" Background="Transparent" Margin="10,175,10,10" Model="{Binding RespiratoryAnalyticsPlot}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True"/>
+
+                            <Grid Margin="10,130,10,10" Grid.Column="1">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="40"/>
                                     <RowDefinition Height="50"/>
-                                    <RowDefinition Height="100"/>
-                                    <RowDefinition Name="row_RespiratoryAnalysisPropertiesPlot"/>
+                                    <RowDefinition Height="371"/>
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="50"/>
@@ -248,9 +247,11 @@
                                     <ColumnDefinition Width="50*"/>
                                     <ColumnDefinition Width="50*"/>
                                 </Grid.ColumnDefinitions>
+                                <!-- Title -->
+                                <Label Content="Analysis" FontSize="18" Height="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="314" Grid.ColumnSpan="6"/>
                                 <!-- Epoch Selection -->
-                                <Label Content="Epoch" Height="33" VerticalAlignment="Top" Grid.Row="1" RenderTransformOrigin="0.42,1.061" Margin="0,7,0,0"/>
-                                <ComboBox SelectedValue="{Binding RespiratoryAnalysisSelectedEpoch}" ItemsSource="{Binding RespiratoryAnalyzedEpochs}" IsEnabled="{Binding RespiratorySignalPlotExists}" Grid.ColumnSpan="2" Grid.Column="1" Height="33" VerticalAlignment="Top" Grid.Row="1" Margin="0,7,1,0"/>
+                                <Label Content="Epoch" Height="33" VerticalAlignment="Top" Grid.Row="1" RenderTransformOrigin="0.42,1.061" Margin="0,3,0,0"/>
+                                <ComboBox SelectedValue="{Binding RespiratoryAnalyticsSelectedEpoch}" ItemsSource="{Binding RespiratoryAnalyzedEpochs}" IsEnabled="{Binding RespiratorySignalPlotExists}" Grid.ColumnSpan="2" Grid.Column="1" Height="33" VerticalAlignment="Top" Grid.Row="1" Margin="0,3,1,0"/>
                                 <!-- Label Column -->
                                 <Label Content="Mean" HorizontalAlignment="Left" Margin="0,33,0,0" VerticalAlignment="Top" Grid.Row="2" Height="29" Width="45" RenderTransformOrigin="0.044,0.483"/>
                                 <Label Content="% Var" HorizontalAlignment="Left" Margin="0,62,0,0" VerticalAlignment="Top" Grid.Row="2" Height="29" Width="45"/>
@@ -282,13 +283,11 @@
                                 <Label Content="-Vlm" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2" Height="29" Margin="0,0,0,0"/>
                                 <TextBox Height="26" Margin="5,35,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeMean}" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2"/>
                                 <TextBox Height="26" Margin="5,65,0,0" TextWrapping="Wrap" Text="{Binding RespiratoryExpirationVolumeCoeffVar}" VerticalAlignment="Top" Grid.Column="7" Grid.Row="2"/>
-                                <!-- Change of Properties Plot -->
-                                <Label Content="Signal Properties Plot"  Margin="0,7,0,0" Height="33"  VerticalAlignment="Top" Grid.Row="3" Grid.ColumnSpan="8"/>
-                                <oxy:PlotView Background="Transparent" Margin="10,45,10,10" Model="{Binding RespiratoryPropertiesSignalPlot}" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Grid.ColumnSpan="8" Grid.Row="3"/>
-                                <Label Content="Analysis" FontSize="18" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="314" Grid.ColumnSpan="7" Margin="0,5,0,0"/>
                             </Grid>
 
-                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Margin="614,270,159,271" />
+                            <mtr:ProgressRing IsActive="{Binding RespiratoryProgressRingEnabled}" Grid.ColumnSpan="2" />
+                            <ToggleButton Content="CONSTANT AXIS" Margin="0,135,10,0" IsEnabled="{Binding RespiratorySignalPlotExists}" IsChecked="{Binding RespiratoryUseConstantAxis}" VerticalAlignment="Top" HorizontalAlignment="Right" Width="100" Height="34"/>
+                            <ToggleButton Content="SHOW ANALYTICS" Margin="0,135,115,0" IsEnabled="{Binding RespiratorySignalPlotExists}" IsChecked="{Binding RespiratoryDisplayAnalytics}" VerticalAlignment="Top" HorizontalAlignment="Right" Width="100" Height="34"  Checked="button_DisplayAnalytics_Checked" Unchecked="button_DisplayAnalytics_Checked"/>
                         </Grid>
                     </mtr:MetroTabItem>
                     <mtr:MetroTabItem Header="EEG" HorizontalAlignment="Left" Margin="0,0,-0.333,0" Width="55" Height="41" VerticalAlignment="Top">
@@ -304,7 +303,7 @@
                                     <ColumnDefinition MaxWidth="300" Width="300*"/>
                                     <ColumnDefinition MaxWidth="220" Width="220*"/>
                                     <ColumnDefinition MaxWidth="230" Width="230*" />
-                                    <ColumnDefinition MaxWidth="150" Width="120*"/>
+                                    <ColumnDefinition MaxWidth="120" Width="120*"/>
                                 </Grid.ColumnDefinitions>
                                 <!-- Section Headers -->
                                 <Label Content="Signal Selection" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left"  Grid.ColumnSpan="2"/>
@@ -378,7 +377,6 @@
                                     <!-- From Binary -->
                                     <Label Content="Binary" FontSize="14" Margin="0,5,20,5" Grid.Row="1"/>
                                     <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1"/>
-                                    <ToggleButton Content="CONSTANT AXIS" Width="100" HorizontalAlignment="Right" Margin="0,0,10,2" Grid.Column="3" IsEnabled="{Binding IsEDFLoaded}"  IsChecked="{Binding CoherenceUseConstantAxis}"/>
                                     <!-- From EDF -->
                                     <Label Content="EDF" FontSize="14" Margin="0,5,20,0" Grid.Row="2"/>
                                     <Label Content="Signal 1" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,0" Grid.Column="1" Grid.Row="2"/>
@@ -387,8 +385,8 @@
                                     <ComboBox Margin="79.667,5.333,9.667,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal2}" Grid.Column="1" Grid.Row="3"/>
                                     <Label Content="From" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="2"/>
                                     <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFStartRecord, Delay=700}" Minimum="{Binding CoherenceEDFStartRecordMin}" Maximum="{Binding CoherenceEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
-                                    <Label Content="Duration" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="3" Grid.Row="2"/>
-                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFDuration, Delay=700}" Minimum="{Binding CoherenceEDFDurationMin}" Maximum="{Binding CoherenceEDFDurationMax}" Grid.Column="3" Grid.Row="2"/>
+                                    <Label Content="Duration" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="3"/>
+                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFDuration, Delay=700}" Minimum="{Binding CoherenceEDFDurationMin}" Maximum="{Binding CoherenceEDFDurationMax}" Grid.Column="2" Grid.Row="3"/>
                                 </Grid>
 
                                 <Grid Margin="10,175,10,0">
@@ -400,12 +398,14 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
                                     </Grid.RowDefinitions>
-                                    <Label Content="Signal 1 (Time)" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="0,10,0,0"/>
+                                    <Label Content="Signal 1" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="0,10,0,0"/>
                                     <oxy:PlotView Background="Transparent" Margin="10,48,10,10" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Model="{Binding CoherenceSignalPlot1}"/>
-                                    <Label Content="Signal 2 (Time)" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10.333,12,0,0" Grid.Column="1"/>
+                                    <Label Content="Signal 2" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10.333,12,0,0" Grid.Column="1"/>
                                     <oxy:PlotView Background="Transparent" Margin="10,48,10,10" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Model="{Binding CoherenceSignalPlot2}" Grid.Column="1"/>
                                     <Label Content="Coherence" FontSize="18" Height="38" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10.333,10,0,0" Grid.Column="2"/>
                                     <oxy:PlotView Background="Transparent" Margin="10,48,10,10" ControlzEx:KeyboardNavigationEx.AlwaysShowFocusVisual="True" Model="{Binding CoherencePlot}" Grid.Column="2"/>
+                                    <ToggleButton Content="CONSTANT AXIS" Height="34" Width="100" HorizontalAlignment="Right" Margin="0,10,10,0" IsEnabled="{Binding IsEDFLoaded}"  IsChecked="{Binding CoherenceUseConstantAxis}" VerticalAlignment="Top" Grid.Column="0" />
+                                    <ToggleButton Content="CONSTANT AXIS" Height="34" Width="100" HorizontalAlignment="Right" Margin="0,10,10,0" IsEnabled="{Binding IsEDFLoaded}"  IsChecked="{Binding CoherenceUseConstantAxis}" VerticalAlignment="Top" Grid.Column="1" />
                                 </Grid>
                                 <mtr:ProgressRing IsActive="{Binding CoherenceProgressRingEnabled}"/>
                             </Grid>
